k8s/apps/photoprism/base/photoprism-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism-app
  labels:
    app: photoprism
    role: photoprism
spec:
  serviceName: photoprism
  replicas: 1
  selector:
    matchLabels:
      app: photoprism
      role: photoprism
  template:
    metadata:
      labels:
        app: photoprism
        role: photoprism
    spec:
      containers:
      # documentation : https://docs.photoprism.app/getting-started/docker-compose/
      # Also there is now https://docs.photoprism.app/getting-started/advanced/kubernetes/
      - name: photoprism
        # tags: https://hub.docker.com/r/photoprism/photoprism/tags
        image: photoprism/photoprism:231128

        # from https://docs.photoprism.app/getting-started/advanced/kubernetes/
        readinessProbe:
          # How often (in seconds) to perform the probe. Default to 10 seconds. Minimum value is 1.
          periodSeconds: 20
          # Number of seconds after the container has started before liveness probes are initiated
          initialDelaySeconds: 5
          httpGet:
            path: /api/v1/status
            port: 2342
        
        resources:
          limits:
            memory: "4Gi"
          requests:
            memory: "256Mi"

        ports:
          - name: web-ui
            containerPort: 2342            

        # PhotoPrism configuration via environment variables: https://docs.photoprism.app/getting-started/config-options/
        workingDir: "/photoprism"

        volumeMounts:
          # Original media files (DO NOT REMOVE)
          - mountPath: /photoprism/originals
            name: originals
          # Storage: https://docs.photoprism.app/getting-started/docker-compose/#photoprismstorage
          - mountPath: /photoprism/storage
            name: storage
          # *Optional* base folder from which files can be imported to originals
          # note this doesn't matter much other than it allows me to dump file into it on the server
          - mountPath: /photoprism/import
            name: import
          - mountPath: /dev/dri
            name: intel-quick-sync
        
        # container-level securityContext, which has different config than pod-level securityContext: https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#security-context-1
        securityContext:
          # privileged for /dev/dri access
          privileged: true

      securityContext:
        #runAsUser: 3004
        #runAsGroup: 3004
        fsGroup: 1000
        # 
        #supplementalGroups:
        #  - 107 # for GPU access, must match the host's "render" group id per https://jellyfin.org/docs/general/administration/hardware-acceleration/intel/#kubernetes
        
        # seccomp and AppArmor are explicitly unconfined in
        # docker-compose and recommended to disable in photoprism docs:
        # https://docs.photoprism.app/getting-started/docker-compose/
        seccompProfile:
          type: "Unconfined"

      # pod-level volumes:
      volumes:
        # NOTE: this also requires the PHOTOPRISM_FFMPEG_ENCODER environment variable above to be set to something other than "software"
        # Share hardware devices with FFmpeg and TensorFlow (optional):
        #  Intel Quick Sync hardware acceleration is in the photoprism docker-compose file:
        # I5-13600K has it: https://www.intel.com/content/www/us/en/products/sku/230493/intel-core-i513600k-processor-24m-cache-up-to-5-10-ghz/specifications.html
        - name: intel-quick-sync
          hostPath:
            path: /dev/dri
            # adding BlockDevice causes K8S error 'can only use volume source type of PersistentVolumeClaim or Ephemeral for block mode'. I found some other templates indicating it was unnecessary.
            #type: BlockDevice

        - name: import
          hostPath:
            path: /PATCH_WITH_KUSTOMIZE # e.g /mnt/thedatapool/photos/example/import
        - name: originals
          hostPath:
            path: /PATCH_WITH_KUSTOMIZE # e.g /mnt/thedatapool/photos/example/organized-originals
        - name: storage
          hostPath:
            path: /PATCH_WITH_KUSTOMIZE # e.g /mnt/thedatapool/app-data/photoprism-example/app/storage
