k8s/apps/photoprism/base/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app: photoprism
spec:
  ports:
    - port: 3306
      name: mariadb-port
  # Exposes the Service on a cluster-internal IP. Choosing this value makes the Service only reachable from within the cluster
  type: ClusterIP
  selector:
    app: photoprism
    role: mariadb
